# equity-lens

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: README.md  alembic.ini  equity_lens.db  pyproject.toml
backend/app/: main.py
backend/app/api/: alert_routes.py  backtest_routes.py  broker_routes.py  compare_routes.py  csv_routes.py  dcf_routes.py  finnhub_routes.py  fundamentals_routes.py  heatmap_routes.py  holdings_routes.py  macro_routes.py  markets_routes.py  news_routes.py  notifications_routes.py  pattern_routes.py  portfolio_routes.py  quote_routes.py  research_routes.py  (+9 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_alert_evaluation.py  test_alert_models.py  test_alert_routes.py  test_analysis_model.py  test_analyst_consensus.py  test_backtest_engine.py  test_broker_orders.py  test_broker_sync.py  test_compare.py  test_crypto_provider.py  test_db_models.py  test_deepseek.py  test_dividends.py  test_earnings_summary.py  test_etf_screener.py  test_fundamentals_deep.py  test_health.py  test_heatmap.py  test_holdings.py  test_markets_overview.py  test_mock_market_provider.py  test_news_models.py  test_news_provider.py  test_news_routes.py  test_news_scheduler.py  test_pattern_algorithms.py  test_pattern_detection.py  test_peer_comparison.py  test_portfolio_analytics.py  test_portfolio_risk.py  test_price_models.py  test_provider_factory.py  test_quote_routes.py  test_research_routes.py  test_scheduler.py  test_scheduler_daemon.py  test_scoring.py  test_screener_expanded.py  test_sector_performance.py  (+10 more)
(+100 files in other folders)
